EnergyCorrelatorsJets/CalorimeterTowerENC/src/comp_error.txt
make  all-am
make[1]: Entering directory `/gpfs/mnt/gpfs02/sphenix/user/sgross/sphenix_analysis/EnergyCorrelatorsJets/CalorimeterTowerENC/src/build'
/bin/sh ./libtool  --tag=CXX   --mode=compile /cvmfs/sphenix.sdcc.bnl.gov/gcc-12.1.0/opt/sphenix/core/gcc/12.1.0-57c96/x86_64-centos7/bin/g++ -DPACKAGE_NAME=\"calorimetertowerenc\" -DPACKAGE_TARNAME=\"calorimetertowerenc\" -DPACKAGE_VERSION=\"1.00\" -DPACKAGE_STRING=\"calorimetertowerenc\ 1.00\" -DPACKAGE_BUGREPORT=\"\" -DPACKAGE_URL=\"\" -DPACKAGE=\"calorimetertowerenc\" -DVERSION=\"1.00\" -DSTDC_HEADERS=1 -DHAVE_SYS_TYPES_H=1 -DHAVE_SYS_STAT_H=1 -DHAVE_STDLIB_H=1 -DHAVE_STRING_H=1 -DHAVE_MEMORY_H=1 -DHAVE_STRINGS_H=1 -DHAVE_INTTYPES_H=1 -DHAVE_STDINT_H=1 -DHAVE_UNISTD_H=1 -DHAVE_DLFCN_H=1 -DLT_OBJDIR=\".libs/\" -I. -I..  -I/sphenix/user/sgross/install_dir/include -I/cvmfs/sphenix.sdcc.bnl.gov/gcc-12.1.0/release/release_ana/ana.437/include -isystem/cvmfs/sphenix.sdcc.bnl.gov/gcc-12.1.0/opt/sphenix/core/root-6.26.06.p01/include   -g -O2 -std=c++17 -Wall -Werror -MT CalorimeterTowerENC.lo -MD -MP -MF .deps/CalorimeterTowerENC.Tpo -c -o CalorimeterTowerENC.lo ../CalorimeterTowerENC.cc
libtool: compile:  /cvmfs/sphenix.sdcc.bnl.gov/gcc-12.1.0/opt/sphenix/core/gcc/12.1.0-57c96/x86_64-centos7/bin/g++ -DPACKAGE_NAME=\"calorimetertowerenc\" -DPACKAGE_TARNAME=\"calorimetertowerenc\" -DPACKAGE_VERSION=\"1.00\" "-DPACKAGE_STRING=\"calorimetertowerenc 1.00\"" -DPACKAGE_BUGREPORT=\"\" -DPACKAGE_URL=\"\" -DPACKAGE=\"calorimetertowerenc\" -DVERSION=\"1.00\" -DSTDC_HEADERS=1 -DHAVE_SYS_TYPES_H=1 -DHAVE_SYS_STAT_H=1 -DHAVE_STDLIB_H=1 -DHAVE_STRING_H=1 -DHAVE_MEMORY_H=1 -DHAVE_STRINGS_H=1 -DHAVE_INTTYPES_H=1 -DHAVE_STDINT_H=1 -DHAVE_UNISTD_H=1 -DHAVE_DLFCN_H=1 -DLT_OBJDIR=\".libs/\" -I. -I.. -I/sphenix/user/sgross/install_dir/include -I/cvmfs/sphenix.sdcc.bnl.gov/gcc-12.1.0/release/release_ana/ana.437/include -isystem/cvmfs/sphenix.sdcc.bnl.gov/gcc-12.1.0/opt/sphenix/core/root-6.26.06.p01/include -g -O2 -std=c++17 -Wall -Werror -MT CalorimeterTowerENC.lo -MD -MP -MF .deps/CalorimeterTowerENC.Tpo -c ../CalorimeterTowerENC.cc  -fPIC -DPIC -o .libs/CalorimeterTowerENC.o
../CalorimeterTowerENC.cc: In member function 'void CalorimeterTowerENC::GetE3C(PHCompositeNode*, std::unordered_set<int>, std::unordered_set<int>, std::unordered_set<int>, std::map<int, float>*, bool, float)':
../CalorimeterTowerENC.cc:365:122: error: 'ihcal_geom' was not declared in this scope; did you mean 'ohcal_geom'?
  365 | /*      calo_thread.push_back(std::thread(&CalorimeterTowerENC::*/GetENCCalo(/*, this,*/ topNode,ih, ihcal_tower_energy, ihcal_geom, RawTowerDefs::HCALIN,  jete_ih, ihcal_label, 3, jete, &allcal_ih)/*)*/;
      |                                                                                                                          ^~~~~~~~~~
      |                                                                                                                          ohcal_geom
make[1]: *** [CalorimeterTowerENC.lo] Error 1
make[1]: Leaving directory `/gpfs/mnt/gpfs02/sphenix/user/sgross/sphenix_analysis/EnergyCorrelatorsJets/CalorimeterTowerENC/src/build'
make: *** [all] Error 2
